FIx layout issue on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
-  width: 100%;
+  width: 100vw;
 }
 
 h1,
